app/styles/main.css
/* color scheme */
body,
#afui { background-color:#DCDEE0 !important }
#afui #header { background-color:#0088D1 !important }
#afui .panel { color:#53585F !important }
.input-text { background:#fff !important }

/* zero height for main page header */
#afui #header header[data-parent=main],
#afui #header header.full-page-header {
	height:0 !important;
	border:0 !important;
	display:none !important
}


/* common classes */
.hidden { display:none !important }

/* signup form */
.form.m-signup,
.form.m-login,
.form.m-changepass,
.form.m-resetpass { 
	padding-top:60px;
	padding-left:20px;
}

	/* vertical labels */
	#afui .form_label {
		display: block;
		float: none;
		margin-bottom: 3px;
		padding: 0;
		text-align: left;
		width: auto;
	}
	
/* settings page */
/* making it vertical */
#afui > #menu.tabletMenu {
	height:190px;
	height:auto;
	width:100%;
	top:-190px;
	z-index:190;
	bottom:auto;
}
#afui .button.m-settings {
	background: #DCDEE0;
	border-color: #53585F;
	border-radius: 0;
	border-style: none none solid;
	border-width: 0 0 1px;
	color: #53585F;
	display: block;
	font-size: 14px;
	font-weight: 100;
	height: 40px;
	line-height: 40px;
	margin: 0;
	padding: 0;
	text-align: left;
	text-indent: 20px;
	box-shadow:none;
}

#afui > #menu.tabletMenu { background: #DCDEE0 !important }

#afui .button.m-first { border-top:1px solid #53585F; }

#afui .search-form { padding:0 15px; }
#afui .search-submit { 
	position:absolute;
	background: url("../images/search.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
	border: 0 none;
	height: 16px;
	right: 20px;
	text-indent: -999px;
	top: 7px;
	width: 16px;
}

body #afui .search-field {
	color: #53585F !important;
	display: block;
	float: none;
	height: 30px;
	margin: 15px 0;
	padding: 0;
	text-indent: 10px;
	width: 170px;
	width:100%;
	border-color:#53585F;
	background:#fff !important;
	
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box
}

/* hide navbar */
#afui > #navbar { display:none !important }

/* hide cancel button in popups */
.afPopup #cancel { display:none !important }
.afPopup #action { float:none !important }

/* slideshow */
.slider {
	height:100%;
	position:relative;
	overflow:hidden;
}

	.slider_wrapper {
		position:relative;
		/*height:100%;*/
		overflow:hidden
	}
	
	.slider_slide {
		float:left;
		width:auto;
		position:relative;
	}
	
	.slider_image {
		background-position: 50% 50%;
		background-repeat: no-repeat;
		background-size: cover;
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
		z-index:1;
	}
	
	.slider_author {
		position:relative;
		z-index:2;
		padding-left:30px;
		color:#fff;
		font-weight:100;
		padding-top:30px;
		font-weight:100;
		font-size:20px;
	}
	.slider_title {
		position:relative;
		z-index:2;
		padding-left:30px;
		color:#fff;
		font-weight:700;
		font-size:30px;
	}

/* slider navigation */
.slider-nav {
	position:absolute;
	top:60%;
	z-index:2;
	width:300px;
	left:50%;
	margin-left:-150px;
}

	.slider-nav_link {
		width:20px;
		height:20px;
		display:block;
		border-radius:30px;
		background:#fff;
		margin-right:10px;
		float:left;
		text-indent:-999px;
		overflow:hidden
	}

	.slider-nav_link.m-active { background:#ccc }

/* trigger for main menu it's included in each slide in slider */
.slider_nav-swipe-area {
	display: block;
	height: 20%;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 10;
}
	
/* carousel */
.carousel {
	bottom: 0;
	height: 150px;
	left: -9999px;
	margin: 0 3px 1%;
	z-index:1;
	overflow: hidden;
	position: absolute;
	width: 100%;
	overflow:scroll;
	z-index:1000;
	
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
	/*-webkit-overflow-scrolling:touch;*/
}
	
	.carousel.m-visible { left:0; }	
   	
	.carousel_wrapper {
		width:100%;
		height:150px;
		/*overflow:hidden;*/
		
		position: absolute;
		z-index: 1;
		
		-webkit-tap-highlight-color: rgba(0,0,0,0);
		-webkit-transform: translateZ(0);
		-moz-transform: translateZ(0);
		-ms-transform: translateZ(0);
		-o-transform: translateZ(0);
		transform: translateZ(0);
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
		-webkit-text-size-adjust: none;
		-moz-text-size-adjust: none;
		-ms-text-size-adjust: none;
		-o-text-size-adjust: none;
		text-size-adjust: none;
	}
	
		/*.carousel.m-visible .carousel_wrapper { width:2000em; } */
	
	.carousel_slide {
		position:relative;
		width:100%;
		height: 150px;
	}
		
		.carousel.m-visible .carousel_slide { float:left }
		
		.carousel_doc {
			float:left;
			padding-right:3px;
			height: 150px;
			width: 33.3%;
			
			-webkit-box-sizing:border-box;
			-moz-box-sizing:border-box;
			box-sizing:border-box;
		}
		
		.carousel_doc.m-last { margin-right:0; }
	
		.carousel_slide:last-child .carousel_doc.m-last { padding-right:3px; width:104px }
	
	.carousel_image {
		display:block;
		width:100%;
		background-position: 50% 50%;
		background-repeat: no-repeat;
		background-size: cover;
		z-index:1;
		height: 150px;
	}

/* full page */
.full-page {
	opacity:0;
	position:fixed;
	width:150px;
	height:auto;
	
	transition:top 0.5s, left 0.5s, width 0.5s, height 0.5s;
	-webkit-transition:top 0.5s, left 0.5s, width 0.5s, height 0.5s;
}

.full-page_bg {
	background:rgba(0, 0, 0, 0.3);
	width:100%;
	height:100%;
	left:0;
	top:0;
	z-index:1
}

.full-page_content {
	background: none repeat scroll 0 0 #FFFFFF;
	bottom: 3%;
	left: 5%;
	position: absolute;
	right: 5%;
	top: 3%;
	z-index: 2;
	padding:10px;
	overflow:scroll
}

.full-page.m-visible {
	height: 100%;
	left: 0 !important;
	opacity: 1;
	padding: 0;
	top: 0 !important;
	width: 100%;
	z-index: 100001;
}
	
.search-results { padding:50px 10px 0; }
.search-results__li {
	background-position: 50% 50%;
	background-repeat: no-repeat;
	background-size: cover;
	display: block;
	float: left;
	height: 150px;
	margin-bottom: 2%;
	margin-right: 2%;
	width: 32%;
	z-index: 1;
}

.search-results__li.m-last { margin-right:0; }
	
/* browser and tablets */
@media handheld, only screen and (min-width: 768px) {
	
	/* body #afui .search-field { width: 226px; } */
	
	.carousel,
	.carousel_wrapper,
	.carousel_slide,
	.carousel_image { height:400px }
}

